# openai_enhance

./: Cargo.toml  README.md
src/: adapter.rs  cli.rs  lib.rs  main.rs  sse.rs
src/cot/: deepseek.rs
