[package]
name = "openai_enhance"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
axum = "0.8.1"
clap = { version = "4.5.31", features = ["derive"] }
educe = { version = "0.6.0", features = ["Debug"] }
futures-util = "0.3.31"
reqwest-eventsource = "0.6.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tiktoken-rs = "0.6.0"
tokio = { version = "1.43.0", features = ["macros", "rt"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dependencies.reqwest]
version = "0.12.12"
default-features = false
features = ["charset", "http2", "json", "macos-system-configuration", "rustls-tls-native-roots", "stream"]
